tests/checker/bad/bad_fields3.scilla
contract Empty
()

field bad_bar : List (String -> Int32) = Nil {(String -> Int32)}

transition dummy()

end
